# fast-mult

./: README.md  fast-mult.cabal  stack.yaml
src/Data/: FastMult.hs
src/Data/FastMult/: Internal.hs
