name:                fast-mult
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/clintonmead/fast-mult#readme
license:             BSD3
license-file:        LICENSE
author:              Clinton Mead
maintainer:          clintonmead@gmail.com
copyright:           Copyright: (c) 2017 Clinton Mead
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.FastMult, Data.FastMult.Internal
  build-depends:       base >= 4.9 && < 5, integer-gmp, ghc-prim, strict-base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clintonmead/fast-mult
